--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "cbor": "8.1.0",
     "cbor-rn-prereqs": "8.1.0",
     "date-fns": "2.25.0",
+    "did-resolver": "3.1.3",
     "elliptic": "6.5.4",
     "js-sha256": "0.9.0",
+    "mobx": "6.3.7",
+    "mobx-react": "7.2.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-gesture-handler": "1.10.3",
     "react-native-heroicons": "2.0.2",
-    "react-native-modal": "13.0.0",
     "react-native-pressable-opacity": "1.0.8",
     "react-native-reanimated": "2.3.0-beta.2",
     "react-native-safe-area-context": "3.3.2",
@@ -37,7 +39,8 @@
     "react-native-svg": "12.1.1",
     "react-native-video": "5.2.0",
     "react-native-vision-camera": "2.9.3",
-    "twrnc": "2.0.6",
+    "tailwindcss": "3.0.0-alpha.2",
+    "twrnc": "2.0.7",
     "vision-camera-qrcode-scanner": "git+https://github.com/rodgomesc/vision-camera-qrcode-scanner.git#master"
   },
   "devDependencies": {
@@ -59,7 +62,7 @@
     "@react-native-community/eslint-plugin": "1.1.0",
     "@types/elliptic": "6.4.14",
     "@types/react": "17.0.35",
-    "@types/react-native": "0.66.4",
+    "@types/react-native": "0.66.5",
     "@types/react-native-video": "5.0.10",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
