--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "setup": "cd ios && bundle install",
     "pods": "cd ios && bundle exec pod install",
     "lint": "eslint .",
+    "format": "prettier --write \"./**/*.{js,ts,css,json,md,mdx,html,yml,yaml,pcss,jsx,tsx}\"",
+    "format:locales": "prettier --write \"./locales/**/*.{js,ts,css,json,md,mdx,html,yml,yaml,pcss,jsx,tsx}\"",
+    "create-languages": "tsm ./scripts/createLanguages.ts",
+    "localazy:download": "export $(xargs <.env) && localazy download -r $LOCALAZY_READ_KEY && yarn format:locales",
+    "localazy:keys": "export $(xargs <.env)",
+    "localazy:upload": "export $(xargs <.env) && localazy upload -r $LOCALAZY_READ_KEY -w $LOCALAZY_WRITE_KEY",
     "typescript": "tsc --noEmit"
   },
   "dependencies": {
@@ -25,6 +31,7 @@
     "did-resolver": "3.1.3",
     "elliptic": "6.5.4",
     "js-sha256": "0.9.0",
+    "lodash-es": "4.17.21",
     "mobx": "6.3.7",
     "mobx-react": "7.2.1",
     "react": "17.0.2",
@@ -60,7 +67,9 @@
     "@babel/runtime": "7.16.3",
     "@react-native-community/eslint-config": "3.0.1",
     "@react-native-community/eslint-plugin": "1.1.0",
+    "@riku/json-to-ts": "2.1.0",
     "@types/elliptic": "6.4.14",
+    "@types/fs-extra": "9.0.13",
     "@types/react": "17.0.35",
     "@types/react-native": "0.66.5",
     "@types/react-native-video": "5.0.10",
@@ -80,6 +89,7 @@
     "babel-plugin-transform-remove-debugger": "6.9.4",
     "babel-preset-gatsby": "2.2.0",
     "babel-preset-react-app": "10.0.0",
+    "dotenv": "10.0.0",
     "eslint": "8.2.0",
     "eslint-config-airbnb": "19.0.0",
     "eslint-config-prettier": "8.3.0",
@@ -90,11 +100,14 @@
     "eslint-plugin-react": "7.27.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
+    "fs-extra": "10.0.0",
     "metro-config": "0.66.2",
     "metro-react-native-babel-preset": "0.66.2",
     "prettier": "2.4.1",
     "reactotron-react-native": "5.0.0",
+    "tsm": "2.1.4",
     "typescript": "4.5.2",
-    "util": "0.12.4"
+    "util": "0.12.4",
+    "web-did-resolver": "2.0.8"
   }
 }
