--- a/ios/VaxxedAs/Info.plist
+++ b/ios/VaxxedAs/Info.plist
@@ -38,10 +38,12 @@
 	<key>NSCameraUsageDescription</key>
 	<string>VisionCamera needs access to your Camera for very obvious reasons.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Baloo2.ttf</string>
+		<string>baloo2.ttf</string>
+		<string>firacode.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
