--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native": "0.66.3",
     "react-native-gesture-handler": "1.10.3",
     "react-native-heroicons": "2.0.2",
+    "react-native-markdown-display": "7.0.0-alpha.2",
     "react-native-pressable-opacity": "1.0.8",
     "react-native-reanimated": "2.3.0-beta.2",
     "react-native-safe-area-context": "3.3.2",
