Add appcenter for iOS

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@react-native-community/slider": "4.1.12",
     "@react-navigation/native": "6.0.6",
     "@react-navigation/native-stack": "6.2.5",
+    "appcenter": "4.3.0",
+    "appcenter-analytics": "4.3.0",
+    "appcenter-crashes": "4.3.0",
     "cbor": "8.1.0",
     "cbor-rn-prereqs": "8.1.0",
     "date-fns": "2.25.0",
