--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-video": "5.2.0",
     "react-native-vision-camera": "2.9.3",
     "tailwindcss": "3.0.0-alpha.2",
+    "text-encoding-polyfill": "^0.6.7",
     "twrnc": "2.0.7",
     "vision-camera-qrcode-scanner": "git+https://github.com/rodgomesc/vision-camera-qrcode-scanner.git#master"
   },
