--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash-es": "4.17.21",
     "mobx": "6.3.7",
     "mobx-react": "7.2.1",
+    "process": "^0.11.10",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-gesture-handler": "1.10.3",
