--- a/package.json
+++ b/package.json
@@ -30,12 +30,7 @@
     "appcenter-analytics": "4.3.0",
     "appcenter-crashes": "4.3.0",
     "buffer": "^6.0.3",
-    "cbor": "8.1.0",
-    "cbor-rn-prereqs": "8.1.0",
     "date-fns": "2.25.0",
-    "did-resolver": "3.1.3",
-    "elliptic": "6.5.4",
-    "js-sha256": "0.9.0",
     "lodash-es": "4.17.21",
     "mobx": "6.3.7",
     "mobx-react": "7.2.1",
@@ -77,7 +72,6 @@
     "@react-native-community/eslint-config": "3.0.1",
     "@react-native-community/eslint-plugin": "1.1.0",
     "@riku/json-to-ts": "2.1.0",
-    "@types/elliptic": "6.4.14",
     "@types/fs-extra": "9.0.13",
     "@types/react": "17.0.35",
     "@types/react-native": "0.66.5",
@@ -115,8 +109,6 @@
     "prettier": "2.4.1",
     "reactotron-react-native": "5.0.0",
     "tsm": "2.1.4",
-    "typescript": "4.5.2",
-    "util": "0.12.4",
-    "web-did-resolver": "2.0.8"
+    "typescript": "4.5.2"
   }
 }
