--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-svg": "12.1.1",
     "react-native-video": "5.2.0",
     "react-native-vision-camera": "2.9.3",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "3.0.0-alpha.2",
     "text-encoding-polyfill": "^0.6.7",
     "twrnc": "2.0.7",
