--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "appcenter-analytics": "4.3.0",
     "appcenter-crashes": "4.3.0",
     "buffer": "^6.0.3",
-    "date-fns": "2.25.0",
+    "date-fns": "2.26.0",
     "lodash-es": "4.17.21",
     "mobx": "6.3.7",
     "mobx-react": "7.2.1",
     "process": "^0.11.10",
     "react": "17.0.2",
+    "react-interval-hook": "1.1.3",
     "react-native": "0.66.3",
+    "react-native-fast-storage": "0.1.6",
+    "react-native-figma-squircle": "0.2.0",
     "react-native-gesture-handler": "1.10.3",
     "react-native-heroicons": "2.0.2",
     "react-native-markdown-display": "7.0.0-alpha.2",
@@ -74,7 +77,7 @@
     "@react-native-community/eslint-plugin": "1.1.0",
     "@riku/json-to-ts": "2.1.0",
     "@types/fs-extra": "9.0.13",
-    "@types/react": "17.0.35",
+    "@types/react": "17.0.36",
     "@types/react-native": "0.66.5",
     "@types/react-native-video": "5.0.10",
     "@typescript-eslint/eslint-plugin": "5.4.0",
@@ -94,14 +97,14 @@
     "babel-preset-gatsby": "2.2.0",
     "babel-preset-react-app": "10.0.0",
     "dotenv": "10.0.0",
-    "eslint": "8.2.0",
+    "eslint": "8.3.0",
     "eslint-config-airbnb": "19.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "5.1.1",
-    "eslint-plugin-react": "7.27.0",
+    "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "fs-extra": "10.0.0",
