--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,28 +12,23 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter() // <-- TODO: REMOVE jcenter() WHEN BlurView & Video supports it
+        jcenter()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
         classpath("com.android.tools.build:gradle:4.2.2")
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         mavenCentral()
-        jcenter() // <-- TODO: REMOVE jcenter() WHEN BlurView & Video supports it
+        jcenter()
         mavenLocal()
         maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
         }
         maven {
-            // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
 
