--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android:build": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output ./android/app/src/main/assets/index.android.bundle --assets-dest ./android/app/src/main/res/",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "setup": "cd ios && bundle install",
@@ -26,9 +27,6 @@
     "@react-navigation/native": "6.0.6",
     "@react-navigation/native-stack": "6.2.5",
     "@vaxxnz/nzcp": "^1.0.0",
-    "appcenter": "4.3.0",
-    "appcenter-analytics": "4.3.0",
-    "appcenter-crashes": "4.3.0",
     "buffer": "^6.0.3",
     "date-fns": "2.26.0",
     "lodash-es": "4.17.21",
@@ -38,6 +36,7 @@
     "react": "17.0.2",
     "react-interval-hook": "1.1.3",
     "react-native": "0.66.3",
+    "react-native-device-info": "8.4.8",
     "react-native-fast-storage": "0.1.6",
     "react-native-figma-squircle": "0.2.0",
     "react-native-gesture-handler": "1.10.3",
