--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-fast-storage": "0.1.6",
     "react-native-figma-squircle": "0.2.0",
     "react-native-gesture-handler": "1.10.3",
+    "react-native-haptic-feedback": "1.13.0",
     "react-native-heroicons": "2.0.2",
     "react-native-markdown-display": "7.0.0-alpha.2",
     "react-native-orientation-locker": "1.4.0",
