--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-reanimated": "2.3.0-beta.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.9.0",
+    "react-native-sound": "0.11.1",
     "react-native-static-safe-area-insets": "2.1.1",
     "react-native-svg": "12.1.1",
     "react-native-torch": "1.2.0",
