--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-device-info": "8.4.8",
     "react-native-fast-storage": "0.1.6",
     "react-native-figma-squircle": "0.2.0",
+    "react-native-fireworks": "0.2.6",
     "react-native-gesture-handler": "1.10.3",
     "react-native-haptic-feedback": "1.13.0",
     "react-native-heroicons": "2.0.2",
