--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@react-native-community/slider": "4.1.12",
     "@react-navigation/native": "6.0.6",
     "@react-navigation/native-stack": "6.2.5",
-    "@vaxxnz/nzcp": "^1.0.0",
-    "buffer": "^6.0.3",
+    "@vaxxnz/nzcp": "1.0.1",
+    "buffer": "6.0.3",
     "date-fns": "2.26.0",
     "lodash-es": "4.17.21",
     "mobx": "6.3.7",
     "mobx-react": "7.2.1",
-    "process": "^0.11.10",
+    "process": "0.11.10",
     "react": "17.0.2",
     "react-interval-hook": "1.1.3",
     "react-native": "0.66.3",
@@ -54,10 +54,10 @@
     "react-native-svg": "12.1.1",
     "react-native-torch": "1.2.0",
     "react-native-video": "5.2.0",
-    "react-native-vision-camera": "2.9.3",
-    "stream-browserify": "^3.0.0",
+    "react-native-vision-camera": "2.9.4",
+    "stream-browserify": "3.0.0",
     "tailwindcss": "3.0.0-alpha.2",
-    "text-encoding-polyfill": "^0.6.7",
+    "text-encoding-polyfill": "0.6.7",
     "twrnc": "2.0.7",
     "vision-camera-qrcode-scanner": "git+https://github.com/rodgomesc/vision-camera-qrcode-scanner.git#master"
   },
@@ -82,7 +82,7 @@
     "@types/fs-extra": "9.0.13",
     "@types/react": "17.0.36",
     "@types/react-native": "0.66.5",
-    "@types/react-native-video": "5.0.10",
+    "@types/react-native-video": "5.0.11",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
     "babel-eslint": "10.1.0",
@@ -101,7 +101,7 @@
     "babel-preset-react-app": "10.0.0",
     "dotenv": "10.0.0",
     "eslint": "8.3.0",
-    "eslint-config-airbnb": "19.0.0",
+    "eslint-config-airbnb": "19.0.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
